Gallery post description IE fix

--- a/source/sass/components/_gallery.scss
+++ b/source/sass/components/_gallery.scss
@@ -44,6 +44,7 @@
 }
 
 .gallery__post-description {
+  min-height: 50px;
   margin: 0 0 6px 0;
   font-size: 14px;
   line-height: 24px;
